--- a/ros2_ws/Dockerfile
+++ b/ros2_ws/Dockerfile
@@ -2,7 +2,8 @@ ARG ROS_VERSION=galactic
 FROM ros:${ROS_VERSION} as base-dependencies
 ENV DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get update && apt-get install -y \
+
+RUN apt-get update && apt-get install --no-install-recommends -y \
   autoconf \
   automake \
   curl \
@@ -25,6 +26,13 @@ RUN apt-get update && apt-get install -y \
   && rm -rf /var/lib/apt/lists/*
 
 RUN echo "Set disable_coredump false" >> /etc/sudo.conf
+
+# disable suggested and recommended install
+RUN apt-config dump | grep -we Recommends -e Suggests | sed s/1/0/ \
+  | sudo tee /etc/apt/apt.conf.d/999norecommend
+
+# disable pip caching
+ENV PIP_NO_CACHE_DIR=1
 
 # Configure sshd server settings
 RUN ( \
