--- a/ros2_ws/Dockerfile
+++ b/ros2_ws/Dockerfile
@@ -23,6 +23,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   software-properties-common \
   ssh \
   unzip \
+  wget \
   && rm -rf /var/lib/apt/lists/*
 
 RUN echo "Set disable_coredump false" >> /etc/sudo.conf
