--- a/.github/workflows/manual-dispatch.yml
+++ b/.github/workflows/manual-dispatch.yml
@@ -4,17 +4,29 @@ name: Manual Build and Push
 on:
   workflow_dispatch:
     inputs:
-      image:
-        description: 'The desired image (<workspace>:<ros_distro>)'
+      workspace:
+        description: 'The desired workspace (e.g. ros2-control-libraries)'
         required: true
+      ros_version:
+        description: 'The ROS distribution to use'
+        required: false
+        default: 'galactic'
       cl_branch:
-        description: 'If set, the desired branch of control libraries for the combined image'
+        description: 'The branch of control libraries'
         required: false
-        default: 'develop'
+        default: 'main'
       modulo_branch:
-        description: 'If set, the desired branch of modulo for the combined image'
+        description: 'The branch of modulo'
         required: false
-        default: 'develop'
+        default: 'main'
+      base_tag:
+        description: 'The tag of the base image to use (if left empty, the tag is the ROS version)'
+        required: false
+        default: ''
+      output_tag:
+        description: 'The tag for the output image (if left empty, the base tag is used)'
+        required: false
+        default: ''
 
 jobs:
   build-publish:
@@ -27,7 +39,10 @@ jobs:
       - name: Build and Push
         uses: ./.github/actions/build-push
         with:
-          image: ${{ github.event.inputs.image }}
+          workspace: ${{ github.event.inputs.workspace }}
+          ros_version: ${{ github.event.inputs.ros_version }}
           cl_branch: ${{ github.event.inputs.cl_branch }}
           modulo_branch: ${{ github.event.inputs.modulo_branch }}
+          base_tag: ${{ github.event.inputs.base_tag }}
+          output_tag: ${{ github.event.inputs.output_tag }}
           secret: ${{ secrets.GITHUB_TOKEN }}
