Change BASE_TAG to ROS_VERSION in workspace Dockerfiles

--- a/ros_ws/Dockerfile
+++ b/ros_ws/Dockerfile
@@ -1,5 +1,5 @@
-ARG BASE_TAG=noetic
-FROM ros:${BASE_TAG} as base-dependencies
+ARG ROS_VERSION=noetic
+FROM ros:${ROS_VERSION} as base-dependencies
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && apt-get install -y \
