Copy modulo core directly to src folder

--- a/ros2_modulo/Dockerfile
+++ b/ros2_modulo/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /tmp
 RUN git clone -b ${MODULO_BRANCH} --depth 1 https://github.com/epfl-lasa/modulo.git
 
 # copy sources and build ROS workspace with user permissions
-RUN cp -r /tmp/modulo/source/ ${ROS2_WORKSPACE}/src
+RUN cp -r /tmp/modulo/source/modulo_core ${ROS2_WORKSPACE}/src/
 
 WORKDIR ${ROS2_WORKSPACE}
 RUN /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash; colcon build"
