--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -57,6 +57,18 @@ jobs:
           output_tag: galactic-devel
           secret: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Get control libraries hash
+        run: |
+          HASH=$(git ls-remote https://github.com/epfl-lasa/control-libraries.git develop | awk '{ print $1 }')
+          echo "CL_HASH=${HASH}" >> $GITHUB_ENV
+
+      - name: Write hash
+        uses: ./.github/actions/write-hash
+        with:
+          hash: ${{ env.CL_HASH }}
+          file: ./control-libraries-hash
+          ci_branch: ci
+
   build-publish-galactic-control-libraries:
     needs: build-publish-galactic-workspace
     runs-on: ubuntu-latest
@@ -88,6 +100,18 @@ jobs:
           base_tag: galactic-devel
           modulo_branch: develop
           secret: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Get modulo hash
+        run: |
+          HASH=$(git ls-remote https://github.com/epfl-lasa/modulo.git develop | awk '{ print $1 }')
+          echo "MODULO_HASH=${HASH}" >> $GITHUB_ENV
+
+      - name: Write hash
+        uses: ./.github/actions/write-hash
+        with:
+          hash: ${{ env.MODULO_HASH }}
+          file: ./modulo-hash
+          ci_branch: ci
 
   build-publish-galactic-modulo:
     needs: build-publish-galactic-control-libraries
