--- a/.github/workflows/check-upstream.yml
+++ b/.github/workflows/check-upstream.yml
@@ -13,7 +13,7 @@ jobs:
 
   check-hash:
     runs-on: ubuntu-latest
-    name: Check latest hash on control libraries
+    name: Check latest hashes on control libraries and modulo
     outputs:
       cl_id: ${{ steps.check_cl.outputs.id }}
       cl_rebuild: ${{ steps.check_cl.outputs.rebuild }}
@@ -71,6 +71,14 @@ jobs:
           output_tag: galactic-devel
           secret: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Write hash to file and push to ci branch
+        if: ${{ needs.check-hash.outputs.cl_rebuild == 'true' }}
+        uses: ./.github/actions/write-hash
+        with:
+          hash: ${{ needs.check-hash.outputs.cl_id }}
+          file: './control-libraries-hash'
+          ci_branch: ${{ env.CI_BRANCH }}
+
   rebuild-modulo-image:
     needs: [check-hash, rebuild-cl-image]
     runs-on: ubuntu-latest
@@ -90,6 +98,13 @@ jobs:
           modulo_branch: develop
           secret: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Write hash to file and push to ci branch
+        uses: ./.github/actions/write-hash
+        with:
+          hash: ${{ needs.check-hash.outputs.modulo_id }}
+          file: './modulo-hash'
+          ci_branch: ${{ env.CI_BRANCH }}
+
   rebuild-modulo-control-image:
     needs: [ check-hash, rebuild-cl-image, rebuild-modulo-image ]
     runs-on: ubuntu-latest
@@ -107,23 +122,3 @@ jobs:
           workspace: ros2-modulo-control
           base_tag: galactic-devel
           secret: ${{ secrets.GITHUB_TOKEN }}
-
-  write-hash:
-    needs: [check-hash, rebuild-cl-image, rebuild-modulo-image, rebuild-modulo-control-image]
-    runs-on: ubuntu-latest
-    name: Write new hashes to file
-    steps:
-      - name: Checkout CI branch
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ env.CI_BRANCH }}
-
-      - name: Write new hash to file and push to 'ci' branch
-        run: |
-          git config user.name github-actions
-          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-          git fetch && git checkout main && git pull && git checkout ci && git rebase
-          echo ${{ needs.check-hash.outputs.cl_id }} > ./control-libraries-hash
-          echo ${{ needs.check-hash.outputs.modulo_id }} > ./modulo-hash
-          git add ./control-libraries-hash ./modulo-hash
-          git commit -m "Update upstream hashes" && git push
