--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-          git checkout -b ${{ env.CI_BRANCH }} && git push -f -u origin ${{ env.CI_BRANCH }}
+          git checkout -b ${{ env.CI_BRANCH }} origin/main && git push -f -u origin ${{ env.CI_BRANCH }}
 
   build-publish-galactic-workspace:
     needs: create-new-ci-branch
