--- a/.github/workflows/manual-dispatch.yml
+++ b/.github/workflows/manual-dispatch.yml
@@ -27,6 +27,13 @@ on:
         description: 'The tag for the output image (if left empty, the base tag is used)'
         required: false
         default: ''
+      write_image_hash:
+        description: 'Write image SHA256 hash to file (set to false for temporary or test images)'
+        required: false
+        default: 'true'
+
+env:
+  CI_BRANCH: 'ci'
 
 jobs:
   build-publish:
@@ -45,4 +52,6 @@ jobs:
           modulo_branch: ${{ github.event.inputs.modulo_branch }}
           base_tag: ${{ github.event.inputs.base_tag }}
           output_tag: ${{ github.event.inputs.output_tag }}
+          write_image_hash: ${{ github.event.inputs.write_image_hash }}
+          ci_branch: ${{ env.CI_BRANCH }}
           secret: ${{ secrets.GITHUB_TOKEN }}
