--- a/.github/workflows/check-upstream-main.yml
+++ b/.github/workflows/check-upstream-main.yml
@@ -3,7 +3,7 @@ name: Check for updated upstream libraries (main branches)
 # Run scheduled workflow
 on:
   schedule:
-   - cron: '* 4 * * 1,4' # corresponds to Wednesday and Saturday
+   - cron: '05 4 * * 1,4' # corresponds to Wednesday and Saturday
   workflow_dispatch:
 
 env:
