--- a/.github/workflows/check-upstream-devel.yml
+++ b/.github/workflows/check-upstream-devel.yml
@@ -69,10 +69,10 @@ jobs:
             echo "::set-output name=id::${NEW_HASH}"
           fi
 
-  rebuild-cl-image:
+  rebuild-cl-galactic-image:
     needs: check-hash
     runs-on: ubuntu-latest
-    name: Rebuild ros2-control-libraries image
+    name: Rebuild ros2-control-libraries galactic-devel image
     steps:
       - name: Checkout repository
         if: ${{ needs.check-hash.outputs.cl_rebuild == 'true' }}
@@ -97,10 +97,10 @@ jobs:
           file: './control-libraries-develop-hash'
           ci_branch: ${{ env.CI_BRANCH }}
 
-  rebuild-modulo-image:
-    needs: [check-hash, rebuild-cl-image]
+  rebuild-modulo-galactic-image:
+    needs: [check-hash, rebuild-cl-galactic-image]
     runs-on: ubuntu-latest
-    name: Rebuild ros2-modulo image
+    name: Rebuild ros2-modulo galactic-devel image
     if: needs.check-hash.outputs.cl_rebuild == 'true' || needs.check-hash.outputs.modulo_develop_rebuild == 'true'
     steps:
       - name: Checkout repository
@@ -123,10 +123,10 @@ jobs:
           file: './modulo-develop-hash'
           ci_branch: ${{ env.CI_BRANCH }}
 
-  rebuild-modulo-control-image:
-    needs: [ check-hash, rebuild-cl-image, rebuild-modulo-image ]
+  rebuild-modulo-control-galactic-image:
+    needs: [ check-hash, rebuild-cl-galactic-image, rebuild-modulo-galactic-image ]
     runs-on: ubuntu-latest
-    name: Rebuild ros2-modulo-control image
+    name: Rebuild ros2-modulo-control galactic-devel image
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -136,13 +136,14 @@ jobs:
         with:
           workspace: ros2-modulo-control
           base_tag: galactic-devel-nightly
+          dockerfile_extension: .galactic
           ci_branch: ${{ env.CI_BRANCH }}
           secret: ${{ secrets.GITHUB_TOKEN }}
 
   rebuild-cl-humble-image:
     needs: check-hash
     runs-on: ubuntu-latest
-    name: Rebuild ros2-control-libraries image
+    name: Rebuild ros2-control-libraries humble-devel image
     steps:
       - name: Checkout repository
         if: ${{ needs.check-hash.outputs.cl_rebuild == 'true' }}
@@ -170,7 +171,7 @@ jobs:
   rebuild-modulo-humble-image:
     needs: [ check-hash, rebuild-cl-humble-image ]
     runs-on: ubuntu-latest
-    name: Rebuild ros2-modulo image
+    name: Rebuild ros2-modulo humble-devel image
     if: needs.check-hash.outputs.cl_rebuild == 'true' || needs.check-hash.outputs.modulo_humble_rebuild == 'true'
     steps:
       - name: Checkout repository
@@ -196,7 +197,7 @@ jobs:
   rebuild-modulo-control-humble-image:
     needs: [ check-hash, rebuild-cl-humble-image, rebuild-modulo-humble-image ]
     runs-on: ubuntu-latest
-    name: Rebuild ros2-modulo-control image
+    name: Rebuild ros2-modulo-control humble-devel image
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -206,5 +207,6 @@ jobs:
         with:
           workspace: ros2-modulo-control
           base_tag: humble-devel-nightly
+          dockerfile_extension: .humble
           ci_branch: ${{ env.CI_BRANCH }}
           secret: ${{ secrets.GITHUB_TOKEN }}
