--- a/.github/workflows/check-upstream-main.yml
+++ b/.github/workflows/check-upstream-main.yml
@@ -1,4 +1,4 @@
-name: Check for updated upstream libraries (main branches)
+name: Scheduled Build and Push Multi-Arch Images (main branches)
 
 # Run scheduled workflow
 on:
